--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_auth: ^3.1.3
   shared_preferences: ^2.0.8
   firebase_database: ^7.2.1
+  firebase_messaging: ^11.2.0
+  firebase_analytics: ^8.3.4
+  flutter_vibrate: ^1.3.0
   fluttertoast: ^8.0.8
   flutter_native_splash: ^1.2.4
   curved_navigation_bar: ^1.0.1
