--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   permission_handler: ^8.2.4
   csv: ^5.0.0
   pull_to_refresh: ^2.0.0
+  animated_widgets: ^1.1.0
 
 dev_dependencies:
   flutter_test:
